--- a/src/app/fast-covid19-test/fast-covid19-test.component.html
+++ b/src/app/fast-covid19-test/fast-covid19-test.component.html
@@ -24,8 +24,8 @@
                 <div class="col-4">
                     <div class="form-group">
                         <mat-form-field>
-                            <input matInput autocomplete="off" (keyup)="is_israeli_id_number()" (change)="getDetailsFromNamer($event)" class="form-control"
-                                formControlName="IDNum" placeholder="מספר זהות" type="number" />
+                            <input matInput autocomplete="off" (change)="getDetailsFromNamer($event)" class="form-control"
+                                formControlName="IDNum" placeholder="מספר זהות" type="text" />
                         </mat-form-field>
                     </div>
                 </div>
