--- a/src/app/fast-covid19-test/fast-covid19-test.component.html
+++ b/src/app/fast-covid19-test/fast-covid19-test.component.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 
-                <div class="col-6">
+                <div class="col-4">
                     <div class="form-group">
                         <mat-form-field>
                             <input matInput autocomplete="off" class="form-control" formControlName="FirstName"
@@ -62,11 +62,19 @@
                         </mat-form-field>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-4">
                     <div class="form-group">
                         <mat-form-field>
                             <input matInput autocomplete="off" class="form-control" formControlName="LastName"
                                 placeholder="שם משפחה" type="text" />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="form-group">
+                        <mat-form-field>
+                            <input matInput autocomplete="off" class="form-control" formControlName="EMail"
+                                placeholder="אימייל" type="email" />
                         </mat-form-field>
                     </div>
                 </div>
