--- a/src/app/drug-protocols/drug-protocols.component.html
+++ b/src/app/drug-protocols/drug-protocols.component.html
@@ -61,7 +61,7 @@
                                     *matCellDef="let element"
                                     class="text-right"
                                 >
-                                    {{ element.ProtocolName }}
+                                &nbsp;&nbsp;&nbsp;{{ element.ProtocolName }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="D_CLICK">
