--- a/src/app/fast-covid-test-dashboard/fast-covid-test-dashboard.component.html
+++ b/src/app/fast-covid-test-dashboard/fast-covid-test-dashboard.component.html
@@ -265,8 +265,9 @@
                         *matCellDef="let element"
                         style="justify-content: center"
                     >
+                    <!-- *ngIf="element.IdType == '2'" -->
                         <button
-                            *ngIf="element.IdType == '2'"
+                            
                             matTooltip="שלח"
                             class="btn btn-outline-dark ml-4"
                             id="BtnStyle"
